fix: remove overflow hidden from cards

--- a/styles/styles.pcss
+++ b/styles/styles.pcss
@@ -259,7 +259,6 @@
   margin-bottom: 20px;
   background: var(--tmspc-background);
   border-radius: 6px;
-  overflow: hidden;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
 }
 
